# API5500

.github/workflows/: build.yml
HardwareEQNotepad/: CHANGELOG.md  CMakeLists.txt  README.md
HardwareEQNotepad/.github/workflows/: build.yml
HardwareEQNotepad/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
HardwareEQNotepad/workflows/: build.yml
